<resources>
    <string name="app_name">RocknFun App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_establishment">My Establishment</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_auth">Sign In</string>
    <string name="menu_search_fragment">Share</string>
    <string name="menu_create_concert">Create new event</string>
    <string name="hello_world">Hello world</string>
    <string name="new_concert_title">Create new event</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="new_concert_picture">New concert picture</string>
    <string name="artist">Artist</string>
    <string name="description">Description</string>
    <string name="ok">Ok</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="insert_new_image">Insert image</string>
    <string name="title_short">Title is too short</string>
    <string name="title_missing">You must choose a title</string>
    <string name="artist_name_short">Artist name is too short</string>
    <string name="artist_name_missing">You must choose an artist name</string>
    <string name="date_missing">You must select a date</string>
    <string name="search_title">Search</string>
    <string name="be_there_question">Will you be there ?</string>
    <string name="be_there">I\'ll be there</string>
    <string name="number_of_people"> %1$d will be there</string>
    <string name="app_label">rffApp</string>
    <string name="search_hint">City, Bar, Artist ?</string>
    <string name="auth_you_are">Welcome to Rock\'n Fun Factory app.\n Are you :</string>
    <string name="establishment">An establishment ?</string>
    <string name="or">or</string>
    <string name="particular">A particular ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="establishment_name">Your establishment name</string>
    <string name="profile_phone">Phone number</string>
    <string name="profile_address">Address</string>
    <string name="profile_description">Description</string>
    <string name="menu_profile_settings">Profile settings</string>
    <string name="menu_auth_redirection">auth rediretion fragment</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_password">password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet ? <font color='#f05545'>Create one !</font> </string>
    <string name="log_out">Logout</string>
    <string name="choose_name">You must choose a name</string>
    <string name="choose_address">You must choose an address</string>
    <string name="choose_phone">You must choose a phone number</string>
    <string name="choose_description">You must write a description (Opening time, is there food ? …)</string>
    <string name="choose_email">You must select an email</string>
    <string name="choose_passord">You must choose a password</string>
    <string name="problem">A problem occur, please retry</string>
    <string name="weak_password">Your password is too weak</string>
    <string name="error_mail_taken">An account with this mail already exist</string>
    <string name="error_mail_form">Invalid email</string>
    <string name="error_password_form">min 6 car. required</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_password">Password is invalid</string>
    <string name="parameters">Parameters</string>
    <string name="parameter">Parameter</string>
    <string name="save_modifification">Save Modification</string>
    <string name="change_image">Change image</string>
    <string name="modification_complete">Your modification have been saved</string>
    <string name="modification_fail">A probleme occur, please retry later</string>
    <string name="establishment_name_research">Research your establishment</string>
    <string name="verification_mail">A verification mail has been sent</string>
    <string name="auth_error">An error occur, please retry</string>
    <string name="you_must_connect">You must have an account to add concert to your wishlist</string>
    <string name="add_to_wishlist">Add to my wishlist</string>
    <string name="menu_wishlist">Wishlist</string>
</resources>
