<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_establishment"
            android:icon="@drawable/ic_establishment"
            android:title="@string/menu_establishment" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_loginFragment"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/menu_auth" />
        <item
            android:id="@+id/nav_logoutFragment"
            android:icon="@drawable/ic_baseline_backspace_24"
            android:title="@string/log_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_search_fragment" />
        </menu>
    </item>

</menu>
