<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.application.rocknfunapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_NewConcert2"
            app:destination="@id/nav_NewConcert"
            app:enterAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_out_right"
            app:popUpTo="@id/nav_NewConcert"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_establishment"
        android:name="com.application.rocknfunapp.ui.establishment.EstablishmentFragment"
        android:label="@string/menu_establishment"
        tools:layout="@layout/fragment_establishement" />



    <fragment
        android:id="@+id/nav_search"
        android:name="com.application.rocknfunapp.ui.slideshow.SearchResultFragment"
        android:label="@string/menu_search_fragment"
        tools:layout="@layout/fragment_search_result" />

    <fragment
        android:id="@+id/nav_auth_redirection"
        android:name="com.application.rocknfunapp.ui.auth.AuthRedirectionFragment"
        android:label="@string/menu_auth_redirection"
        tools:layout="@layout/fragment_auth_redirection" />

    <fragment
        android:id="@+id/nav_NewConcert"
        android:name="com.application.rocknfunapp.ui.newConcert.NewConcertFragment"
        android:label="@string/menu_create_concert"
        tools:layout="@layout/fragment_new_concert" />

    <fragment
        android:id="@+id/nav_establishmentAuth"
        android:name="com.application.rocknfunapp.ui.auth.EstablishmentAuthFragment"
        android:label="@string/menu_profile_settings"
        tools:layout="@layout/fragment_establishment_auth" />
    <fragment
        android:id="@+id/nav_loginFragment"
        android:name="com.application.rocknfunapp.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_logoutFragment"
        android:name="com.application.rocknfunapp.ui.auth.LogoutFragment"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_establishmentSettingsFragment"
        android:name="com.application.rocknfunapp.ui.establishment.EstablishmentSettingsFragment"
        android:label="fragment_establishment_settings"
        tools:layout="@layout/fragment_establishment_settings" />
</navigation>