<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_fragment_button_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"

    >

<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/auth_header_image"
    android:layout_margin="@dimen/margin_20dp"
    android:src="@drawable/logo"/>

<TextView
    android:id="@+id/auth_fragment_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginTop="55dp"
    android:gravity="center"
    android:text="@string/auth_you_are"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/auth_header_image" />

<Button
    android:layout_margin="@dimen/margin_20dp"
    android:id="@+id/auth_establishment_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_button"
    android:text="@string/establishment"
    app:layout_constraintTop_toBottomOf="@id/auth_fragment_header"
    app:layout_constraintRight_toRightOf="parent"
    android:paddingHorizontal="@dimen/margin_20dp"
    android:backgroundTint="@color/colorAccent"
    app:layout_constraintLeft_toLeftOf="parent"/>
<TextView
    android:layout_margin="@dimen/margin_20dp"
    android:id="@+id/or_auth_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/auth_establishment_button"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:text="@string/or"/>
<Button
    android:layout_margin="@dimen/margin_20dp"
    android:backgroundTint="@color/colorAccent"
    android:id="@+id/auth_particular_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/particular"
    app:layout_constraintTop_toBottomOf="@id/or_auth_fragment"
    app:layout_constraintRight_toRightOf="parent"
    android:paddingHorizontal="@dimen/margin_20dp"
    android:background="@drawable/rounded_button"
    app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
